@@ -15,7 +15,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 import okhttp3.OkHttpClient;
@@ -203,7 +202,7 @@ public abstract class IntegrationTestBase {
               }
               return builder.build();
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -225,7 +224,7 @@ public abstract class IntegrationTestBase {
               }
               return builder.build();
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
